// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MintayCardEventSerializer > deserialize > deserialize snapshot 1`] = `
{
  "answer": 3,
  "timestamp": 1234567890,
  "type": 0,
}
`;

exports[`MintayCardEventSerializer > serialize > serialize snapshot 1`] = `
{
  "data": {
    "answer": 3,
    "timestamp": 1234567890,
    "type": 0,
  },
  "version": 1,
}
`;
